# Backend_FastAPI_practice

./: README.md  alembic.ini  crud.py  db.sqlite3  item_views.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
alembic/: env.py
alembic/versions/: 1762c38a0edd_create_order_product_assciation_table.py  29f9cd0d405c_create_posts_table.py  5e099b037641_add_count_column_to_order_proudct_.py  6357f447e8d5_create_table.py  9da80ad10321_create_products_table.py  b77ab6edb161_create_users_table.py  cf87716e36c4_create_orders_table.py  ec25b06a76c5_create_profile_table.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
mypackage/: __init__.py  crud.py  schemas.py  view.py
