[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Dinyar <migranovdiniar@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
pydantic-extra-types = "^2.0.0"
email-validator = "^2.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.12.0"
alembic = "^1.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
